# my_django

./: .env.example  .gitignore  .isort.cfg  .pep8  .pylintrc  README.md  pyproject.toml  requirements.txt  run_docker.bat
.github/workflows/: python-ci.yml
docker/: .env.example  docker-compose.yml
docker/api/: Dockerfile
docker/celery-flower/: Dockerfile
docker/celery-worker-mail/: Dockerfile
docker/django/: Dockerfile
docker/nginx/: default.conf
scripts/: run_django.bat  run_docker.bat  run_manual.bat
scripts/docker/: create_superuser.bat  refresh_location.bat  run.bat  run_all.bat  run_only_postgresql.bat
src/account/: admin.py  models.py  urls.py
src/account/constants/: verify_email.py
src/account/decorators/: login.py
src/account/forms/: _fields.py  change_password.py  login.py  profile.py  register.py
src/account/migrations/: 0001_initial.py  0002_rename_provide_user_province.py  0003_alter_user_email.py  0004_auto_20251101_1712.py  0005_alter_user_display_name.py  0006_alter_user_managers.py
src/account/serializers/: province.py  user.py  ward.py
src/account/utils/: generate_otp.py  generate_secret.py  location.py
src/account/views/: change_password.py  login.py  profile.py  register.py
src/common/: urls.py  views.py
src/common/admin/: base.py
src/common/constants/: base.py  drf_action.py
src/common/models/: base.py
src/common/schemas/: dynamodb.py
src/common/services/: dynamodb.py
src/common/utils/: ping_redis.py
src/main/: __init__.py  celery.py  settings.py  urls.py
src/task_manager/: urls.py
(+40 files in other folders)
